syntax = "proto3";

package panel;

import "panel/types.proto";
import "proto/stroppy/cloud.proto";
import "protopgx/pgx.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/stroppy-cloud-panel/internal/proto/panel";

message StroppyRun {
    option (sql.sql_table) = {
        generate: true
        table_name: "stroppy_runs"
    };
    message List {
        repeated StroppyRun runs = 1;
    }
    Ulid id = 1 [
        (sql.sql_field) = {
            sql_type: {type: TEXT,user_cast: true}
            constraints: {primary_key: true}
        }
    ];
    Timing timing = 2 [(sql.sql_field).embedded_message = true];
    stroppy.Status status = 3 [(validate.rules).enum.defined_only = true];
    stroppy.StroppyRun run_info = 4 [(sql.sql_field).serialized_message = true];
    Ulid cloud_automation_id = 5 [(sql.sql_field) = {sql_type: {type: TEXT,user_cast: true}}];
    string grafana_dashboard_url = 6 [(sql.sql_field) = {sql_type: {type: TEXT}}];
    repeated StroppyStep steps = 7 [(sql.sql_relation) = {
        one_to_many: {
            ref_name: "run_id"
            on_delete_cascade: true
            existed_field: true
        }
    }];
}

message StroppyStep {
    option (sql.sql_table) = {
        generate: true
        table_name: "stroppy_steps"
    };
    message List {
        repeated StroppyStep steps = 1;
    }
    Ulid id = 1 [
        (sql.sql_field) = {
            sql_type: {type: TEXT,user_cast: true}
            constraints: {primary_key: true}
        }
    ];
    Timing timing = 2 [(sql.sql_field).embedded_message = true];
    stroppy.Status status = 3 [(validate.rules).enum.defined_only = true];
    Ulid run_id = 4 [
        (sql.sql_field) = {sql_type: {type: TEXT,user_cast: true},
            constraints: {constraint: "NOT NULL REFERENCES stroppy_runs(id) ON DELETE CASCADE"}
        }
    ];
    stroppy.StroppyStepRun step_info = 5 [(sql.sql_field).serialized_message = true];
}
